kubernetes/examples-yaml/02-nginx-service-nodeport.yaml
# Service NodePort: espone nginx su una porta fissa di TUTTI i nodi
# (es. http://192.168.1.201:30080). Range NodePort valido: 30000-32767.
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-nodeport
spec:
  type: NodePort
  selector:
    app: nginx-demo
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
